--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "client-gateway"]
 	path = client-gateway
 	url = git@github.com:EduardEddy/client-gateway-ms.git
+[submodule "products-ms"]
+	path = products-ms
+	url = git@github.com:EduardEddy/products-ms.git
