--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "products-ms"]
 	path = products-ms
 	url = git@github.com:EduardEddy/products-ms.git
+[submodule "orders-ms"]
+	path = orders-ms
+	url = git@github.com:EduardEddy/orders-ms.git
